--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">DDI_Tarea_6_UI</string>
+    <string name="App_bar_layout_tittle">Alarma</string>
+    <string name="more">More</string>
+    <string name="time_until_next_alarm">Sonar en 5 horas 58 minutos</string>
+
 </resources>
