Continuacion del menu navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="App_bar_layout_tittle">Alarma</string>
     <string name="more">More</string>
     <string name="time_until_next_alarm">Sonar en 5 horas 58 minutos</string>
-
+    <string name="item_alarm">Alarma</string>
 </resources>
